# DRL-UR5-Object-Reaching-Tracking

./: README.md
src/ur_main/ur_tracking/: CMakeLists.txt
src/ur_main/ur_tracking/config/: training_params.yaml
src/ur_main/ur_tracking/launch/: gazebo_execution.launch  ppo_gae_main.launch  ppo_gae_test.launch  reaching.launch  reinforce_main.launch  reinforce_test.launch
src/ur_main/ur_tracking/script/ur_tracking/: gazebo_execution.py  ppo_gae_main.py  ppo_gae_test.py  reaching_main.py  reinforce_main.py  reinforce_test.py
src/ur_main/ur_tracking/script/ur_tracking/algorithm/: PPOGAEAgent.py  REINFORCEAgent.py  ppo_gae.py
src/ur_main/ur_tracking/script/ur_tracking/env/: __init__.py  controllers_connection.py  gazebo_connection.py  joint_publisher.py  robot_gazebo_env_goal.py  ur_tracking_env.py
src/ur_main/ur_tracking/script/ur_tracking/models/model_z02_-01/: trained_policy_network_weights.h5
src/ur_main/ur_tracking/script/ur_tracking/models/model_z02_005/: trained_policy_network_weights.h5  trained_value_network_weights.h5
src/ur_main/ur_tracking/script/ur_tracking/models/model_z02_01/: trained_value_network_weights.h5
src/ur_main/ur_tracking/script/ur_tracking/models/model_z03/: trained_policy_network_weights.h5  trained_value_network_weights.h5
src/ur_main/ur_tracking/script/ur_tracking/models/model_z03_d005_e5/: trained_policy_network_weights.h5  trained_value_network_weights.h5
src/ur_main/ur_tracking/script/ur_tracking/models/model_z04/: trained_policy_network_weights.h5  (+1 more)
src/ur_main/ur_tracking/script/ur_tracking/util/: plot_Q_learn_matrix.py
(+189 files in other folders)
